<resources>
    <string name="app_name">Bookinder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_categorias">CategoriasActivity</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>

    <string name="filter_titulo">" Título"</string>
    <string name="filter_isbn">" Isbn"</string>
    <string name="filter_autor">" Autor"</string>
    <string name="filter_editora">" Editora"</string>
    <string name="filter_ano">" Ano"</string>
    <string name="title_activity_activity_home">activity_home</string>


    <string name="already_registered">Already have an account? Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="action_register">Register</string>
    <string name="app_decription">Your awesome app</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="different_login">or</string>
    <string name="plus_sign_out">Change Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_field_required">Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Register</string>


    <string name="associar_conta_face">Associar conta Facebook</string>
    <string name="associar_conta_google">Associar conta Google</string>
    <string name="facebook_app_id">1055845061137163</string>
    <string name="request_fail">Request fail, check you internet connection and try again later.</string>

</resources>
