<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/list_filters"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.11" />


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_titulo"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/filter_titulo"
                android:textSize="9sp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="buttonOnClick"
                android:clickable="true"
                android:alpha="1"/>
            <Button
                android:id="@+id/b_isbn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/filter_isbn"
                android:textSize="9sp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="buttonOnClick"
                android:clickable="true"
                android:alpha="0.4"/>
            <Button
                android:id="@+id/b_autor"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/filter_autor"
                android:textSize="9sp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="buttonOnClick"
                android:clickable="true"
                android:alpha="0.4"/>
            <Button
                android:id="@+id/b_editora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/filter_editora"
                android:textSize="9sp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="buttonOnClick"
                android:clickable="true"
                android:alpha="0.4"/>
            <Button
                android:id="@+id/b_ano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/filter_ano"
                android:textSize="9sp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="buttonOnClick"
                android:clickable="true"
                android:alpha="0.4"/>
    </LinearLayout>

</LinearLayout>
